# Sudoku_Game-Class_Project

./: .gitignore  CMakeLists.txt  README.md  Sudoku.exe.lnk  SudokuApp.cpp  SudokuApp.h  ids.h  main.cpp  pch.h
Precompiled Executable/levels/: level3.xml
SudokuLib/: Background.cpp  Background.h  BackgroundDec.cpp  BackgroundDec.h  CMakeLists.txt  Container.cpp  Container.h  ContainerDec.cpp  ContainerDec.h  Declarations.cpp  Declarations.h  DigitEater.cpp  DigitEater.h  Digits.cpp  Digits.h  DigitsDec.cpp  DigitsDec.h  Givens.cpp  Givens.h  GivensDec.cpp  GivensDec.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Scoreboard.cpp  Scoreboard.h  SpartyHead.cpp  SpartyHead.h  SpartyHeadDec.cpp  SpartyHeadDec.h  Sudoku.cpp  Sudoku.h  SudokuView.cpp  SudokuView.h  Xray.cpp  (+5 more)
Tests/: CMakeLists.txt  DigitsTest.cpp  EmptyTest.cpp  ItemTest.cpp  LevelLoadTest.cpp  test.xml  test2.xml  test3.xml
